--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
         }
 
         h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: 1rem;
+            text-align: center;
         }
 
         p {
             text-align: center;
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             margin-bottom: 2rem;
+            max-width: 90%;
         }
 
         .message {
             text-align: center;
-            font-size: 1rem;
+            font-size: 1.2rem;
             margin-bottom: 1rem;
         }
 
@@ -47,6 +49,7 @@
 
         .theme {
             font-style: italic;
+            font-size: 1.2rem;
             margin-bottom: 1rem;
         }
     </style>
