--- a/index.html
+++ b/index.html
@@ -1,81 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #222;
+    color: #f2f2f2;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 1rem;
+}
+
+.content {
+    max-width: 800px;
+    line-height: 1.6;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+p {
+    font-size: 1.1rem;
+}
+
+a {
+    color: #65c47a;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sapien.Country</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        p {
-            text-align: center;
-            font-size: 1.5rem;
-            margin-bottom: 2rem;
-            max-width: 90%;
-        }
-
-        .message {
-            text-align: center;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-
-        a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        .theme {
-            font-style: italic;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Mind is Without Fear</h1>
-    <p>
-        Where the mind is without fear and the head is held high<br>
-        Where knowledge is free<br>
-        Where the world has not been broken up into fragments<br>
-        By narrow domestic walls<br>
-        Where words come out from the depth of truth<br>
-        Where tireless striving stretches its arms towards perfection<br>
-        Where the clear stream of reason has not lost its way<br>
-        Into the dreary desert sand of dead habit<br>
-        Where the mind is led forward by thee<br>
-        Into ever-widening thought and action<br>
-        Into that heaven of freedom, my Father, let my country awake.
-    </p>
-    <div class="theme">
-        Uniting AI and Society for a better world.
+    <div class="container">
+        <div class="content">
+            <h1>Sapien.Country</h1>
+            <h2>A Borderless Platform for Progress and Unity</h2>
+            <p>
+                Sapien.Country is a global virtual community that fosters progress, unity, and collaboration among individuals, entrepreneurs, and organizations from diverse cultures and backgrounds. By leveraging the power of artificial intelligence and social intelligence, we aim to create a borderless platform that encourages the exchange of ideas, knowledge, and resources, helping to build a sustainable and compassionate future for all.
+            </p>
+            <p>
+                If you're interested in becoming a part of the Sapien.Country community, you can express your interest by tweeting your reasons for wanting to join, and tag @LabsSapien6440 in your message. Selected participants will receive an NFT pass for free access to our internal discussions and exclusive events.
+            </p>
+            <p>
+                For any questions or inquiries, tweet out to us and tag @LabsSapien6440 in the message. We are always eager to engage with individuals who share our vision of a borderless platform for progress and unity.
+            </p>
+            <p>
+                To support Sapien.Country and our initiatives, you can also explore and purchase our NFTs on OpenSea: <a href="https://opensea.io/collection/sapiencountry" target="_blank">https://opensea.io/collection/sapiencountry</a>
+            </p>
+            <p>
+                Together, let's build a borderless platform that nurtures progress, unity, and collaboration, shaping a brighter future for all.
+            </p>
+        </div>
     </div>
-    <div class="message">
-        To join us at <strong>Sapien.Country</strong>, the sky of opportunities, tweet why you should be a part of the internal discussion to direct Sapien.Country, tagging <strong>@LabsSapien6440</strong> in the message, and you may just win an NFT pass for free. In case of any questions, tweet out to us, tagging <strong>@LabsSapien6440</strong> in the message. <br><br>
-        <a href="https://opensea.io/collection/sapiencountry">Explore our NFT collection on OpenSea</a>
-    </div>
-    <a href="https://twitter.com/intent/tweet?text=%40LabsSapien6440%20I%20want%20to%20be%20a%20part%20of%20the%20internal%20discussion%20to%20direct%20Sapien.Country%20because...">Tweet Now</a>
 </body>
 </html>
