--- a/index.html
+++ b/index.html
@@ -53,21 +53,37 @@ a:hover {
     <div class="container">
         <div class="content">
             <h1>Sapien.Country</h1>
-            <h2>A Borderless Platform for Progress and Unity</h2>
-            <p>
-                Sapien.Country is a global virtual community that fosters progress, unity, and collaboration among individuals, entrepreneurs, and organizations from diverse cultures and backgrounds. By leveraging the power of artificial intelligence and social intelligence, we aim to create a borderless platform that encourages the exchange of ideas, knowledge, and resources, helping to build a sustainable and compassionate future for all.
+            <h2>An Expansive Sky of Opportunities</h2>
+            <p class="poem">
+                Where the mind is without fear and the head is held high<br>
+                Where knowledge is free<br>
+                Where the world has not been broken up into fragments<br>
+                By narrow domestic walls<br>
+                Where words come out from the depth of truth<br>
+                Where tireless striving stretches its arms towards perfection<br>
+                Where the clear stream of reason has not lost its way<br>
+                Into the dreary desert sand of dead habit<br>
+                Where the mind is led forward by thee<br>
+                Into ever-widening thought and action<br>
+                Into that heaven of freedom, my Father, let my country awake.
             </p>
             <p>
-                If you're interested in becoming a part of the Sapien.Country community, you can express your interest by tweeting your reasons for wanting to join, and tag @LabsSapien6440 in your message. Selected participants will receive an NFT pass for free access to our internal discussions and exclusive events.
+                Sapien.Country is an ever-expanding sky of opportunities, embracing the borderless and limitless nature of human potential. As a global virtual network, our community warmly welcomes individuals, entrepreneurs, and organizations from diverse cultures and backgrounds to work together in synergy.
             </p>
             <p>
-                For any questions or inquiries, tweet out to us and tag @LabsSapien6440 in the message. We are always eager to engage with individuals who share our vision of a borderless platform for progress and unity.
+                By harnessing the power of artificial intelligence and social intelligence, we aspire to create a nurturing environment that fosters innovation, unity, and compassionate action for the greater good.
+            </p>
+            <p>
+                If you resonate with our vision and wish to join the Sapien.Country community, express your interest by tweeting your reasons and tag @LabsSapien6440 in your message. Selected participants will receive an NFT pass for free access to our internal discussions and exclusive events.
+            </p>
+            <p>
+                For any questions or inquiries, tweet out to us and tag @LabsSapien6440 in the message. We are always eager to connect with like-minded individuals who share our passion for unity and progress.
             </p>
             <p>
                 To support Sapien.Country and our initiatives, you can also explore and purchase our NFTs on OpenSea: <a href="https://opensea.io/collection/sapiencountry" target="_blank">https://opensea.io/collection/sapiencountry</a>
             </p>
             <p>
-                Together, let's build a borderless platform that nurtures progress, unity, and collaboration, shaping a brighter future for all.
+                Let's unite under the boundless sky of Sapien.Country, where together, we will cultivate a brighter and more harmonious future for all.
             </p>
         </div>
     </div>
